# claims-ai

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: agent.py  agent_tools.py  database.py  main.py  mock_data.py  models.py  services.py
database/: init.sql
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
